--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
         <section class="about-text">
           <p>
-            Soy un ingeniero de software de Perú que se enfoca en el desarrollo de aplicaciones y Backend manejando múltiples lenguajes <b class="highlighter">(Java, Dart, GDScript, Python, Javascript, PHP)</b> y múltiples base de datos <b class="highlighter">(PostgreSQL, MySQL, MongoDB, Firebase y más)</b>.
+           Soy un bachiller en ingeniería de sistemas en Perú y me enfoco en el desarrollo de aplicaciones y Backend manejando múltiples lenguajes <b class="highlighter">(Java, Dart, GDScript, Python, Javascript, PHP)</b> y múltiples base de datos <b class="highlighter">(PostgreSQL, MySQL, MongoDB, Firebase y más)</b>.
           </p>
           
           <p>
