--- a/index.html
+++ b/index.html
@@ -426,6 +426,60 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="desarrollo web">
+              <a target="_blank" href="https://villamontessori.edu.pe/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-8.jpg" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Villa Montessori</h3>
+
+                <p class="project-category">Desarrollo Web</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="desarrollo web">
+              <a target="_blank" href="https://gamarra.tech/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-7.jpg" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Gamarra Tech</h3>
+
+                <p class="project-category">Desarrollo Web</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="desarrollo web">
+              <a target="_blank" href="https://altux.edu.pe/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-6.jpg" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Altux</h3>
+
+                <p class="project-category">Desarrollo Web</p>
+
+              </a>
+            </li>
+            
+            <li class="project-item  active" data-filter-item data-category="desarrollo web">
               <a target="_blank" href="https://oea.edu.pe/">
 
                 <figure class="project-img">
@@ -461,7 +515,6 @@
               </a>
             </li>
 
-
             <li class="project-item  active" data-filter-item data-category="desarrollo web">
               <a target="_blank" href="https://heritagetextil.com/">
 
@@ -479,7 +532,6 @@
 
               </a>
             </li>
-
 
             <li class="project-item  active" data-filter-item data-category="videojuegos">
               <a target="_blank" href="https://hansexebio.itch.io/golden-boy-deaperture">
